<resources>
    <string name="app_name">PDF magic</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_pdf_from_images">Generate PDF from images</string>
    <string name="action_images_from_pdf">Generate images from PDF</string>
    <string name="action_pdf_list">Created pdf files</string>

    <string name="progress_dialog_create_pdf">Creating PDF</string>
    <string name="progress_dialog_please_wait">Please wait</string>

    <string name="button_open">Open</string>

    <string name="open_file_dialog_title">Finished</string>
    <string name="open_file_dialog_content">Pdf file was created</string>
    <string name="open_file_dialog_positive">Open file</string>
    <string name="open_file_dialog_negative">Close</string>

    <string name="delete_file_dialog_title">Delete</string>
    <string name="delete_file_dialog_content">Delete from list</string>
    <string name="delete_file_dialog_positive">Delete file</string>
    <string name="delete_file_dialog_negative">Close</string>

    <string name="delete_action_negative">Can not delete</string>
    <string name="delete_action_positive">Deleted</string>

    <string name="select_dialog_field">Select catalog to save images</string>
    <string name="generate_button">Generate images</string>
    <string name="select_file_button">Select PDF file</string>
    <string name="select_file_name">Set name for images</string>
    <string name="select_file_name_info">Will  be used mask [name]-[page_number].[image extension]</string>


    <string name="gen_images_message_field_folder">Please set folder field </string>
    <string name="gen_images_message_field_file">Please set file field</string>
    <string name="gen_images_message_field_name">Please set name field</string>

    <string name="choose_actions_dialog_title">Do action</string>
    <string name="choose_actions_dialog_positive">Choose</string>

    <string name="action_licenses">Licenses</string>
    <array name="actions">
        <item name="1">Rename</item>
        <item name="2">Get images from pdf</item>
        <item name="3">Add watermark</item>
    </array>
</resources>
