<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sparksoftsolutions.com.pdfcreator.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"

        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_pdf_from_images"
            android:id="@+id/bGenGalery"
            android:singleLine="false"
            android:drawableTop="@drawable/pdf4"
            android:layout_weight="0.33" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_images_from_pdf"
            android:id="@+id/bImages"
            android:drawableTop="@drawable/jpg"
            android:layout_weight="0.33" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_pdf_list"
            android:id="@+id/bPdfLIist"
            android:drawableTop="@drawable/list"
            android:layout_weight="0.33" />

    </LinearLayout>

</RelativeLayout>
