<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/select_file_button"
        android:id="@+id/textView2"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eFile"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:id="@+id/iBSelectPdf"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="#486bbd'"
            android:text="..."
            android:layout_marginBottom="5dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/select_dialog_field"
        android:id="@+id/textView3"
        android:layout_marginLeft="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eFolder"
            android:clickable="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:id="@+id/ibSelectDialog"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="#486bbd"
            android:text="..."
            android:layout_marginBottom="5dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/select_file_name"
        android:id="@+id/textView4"
        android:layout_marginLeft="5dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eImageName"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/select_file_name_info"
        android:id="@+id/textView5"
        android:textColor="#bd2a2a"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_button"
        android:id="@+id/bGenerate"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        style="@style/do_action_button"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp" />

</LinearLayout>